--- a/pages/concepts.html
+++ b/pages/concepts.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Concepts — O3</title>
   <meta name="description" content="Key concepts and terminology for O3 — Orchestrator of Orbital Operations." />
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
   <header>
     <div class="nav">
-      <strong><a href="/index.html">O3</a></strong>
+      <strong><a href="../index.html">O3</a></strong>
       <nav>
-        <a href="/index.html#overview">Overview</a>
-        <a href="/pages/architecture.html">Architecture</a>
-        <a href="/pages/concepts.html">Concepts</a>
-        <a href="/pages/updates.html">Updates</a>
-        <a href="/index.html#contact">Contact</a>
+        <a href="../index.html#overview">Overview</a>
+        <a href="architecture.html">Architecture</a>
+        <a href="concepts.html">Concepts</a>
+        <a href="updates.html">Updates</a>
+        <a href="../index.html#contact">Contact</a>
       </nav>
     </div>
   </header>
@@ -108,7 +108,7 @@
     © <span id="y"></span> O3 — Orchestrator of Orbital Operations. Built as a static page.
   </footer>
 
-  <script defer src="/assets/js/main.js"></script>
+  <script defer src="../assets/js/main.js"></script>
 </body>
 </html>
 
