--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>O3 — Orchestrator of Orbital Operations</title>
   <meta name="description" content="O3 is a system for orchestrating orbital operations, coordinating planning, scheduling, and execution of spacecraft missions." />
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <header>
@@ -13,9 +13,9 @@
       <strong>O3</strong>
       <nav>
         <a href="#overview">Overview</a>
-        <a href="/pages/architecture.html">Architecture</a>
-        <a href="/pages/concepts.html">Concepts</a>
-        <a href="/pages/updates.html">Updates</a>
+        <a href="pages/architecture.html">Architecture</a>
+        <a href="pages/concepts.html">Concepts</a>
+        <a href="pages/updates.html">Updates</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
@@ -33,9 +33,9 @@
         </p>
 
         <div class="btns">
-          <a class="btn primary" href="/pages/architecture.html">Architecture</a>
-          <a class="btn" href="/pages/concepts.html">Concepts</a>
-          <a class="btn" href="/pages/updates.html">Updates</a>
+          <a class="btn primary" href="pages/architecture.html">Architecture</a>
+          <a class="btn" href="pages/concepts.html">Concepts</a>
+          <a class="btn" href="pages/updates.html">Updates</a>
         </div>
 
         <p class="muted" style="margin-top:14px">
@@ -44,7 +44,7 @@
       </div>
 
       <figure>
-        <img src="/assets/img/hero.svg" alt="O3 System Overview" />
+        <img src="assets/img/hero.svg" alt="O3 System Overview" />
         <figcaption>O3 system architecture showing core orchestration components and data flows.</figcaption>
       </figure>
     </section>
@@ -91,19 +91,19 @@
       <div class="grid" style="margin-top:10px">
         <div class="col-6">
           <figure>
-            <img src="/assets/img/figure1.svg" alt="Architecture Diagram" />
+            <img src="assets/img/figure1.svg" alt="Architecture Diagram" />
             <figcaption>Architecture — Core components and their relationships in the O3 system.</figcaption>
           </figure>
         </div>
         <div class="col-6">
           <figure>
-            <img src="/assets/img/figure2.svg" alt="Data Flow Diagram" />
+            <img src="assets/img/figure2.svg" alt="Data Flow Diagram" />
             <figcaption>Data Flow — Information exchange between planning, scheduling, and execution modules.</figcaption>
           </figure>
         </div>
         <div class="col-12">
           <figure>
-            <img src="/assets/img/figure3.svg" alt="System Overview" />
+            <img src="assets/img/figure3.svg" alt="System Overview" />
             <figcaption>System Overview — Complete O3 architecture showing planning, scheduling, execution, and orchestrator core integration.</figcaption>
           </figure>
         </div>
@@ -127,6 +127,6 @@
     © <span id="y"></span> O3 — Orchestrator of Orbital Operations. Built as a static page.
   </footer>
 
-  <script defer src="/assets/js/main.js"></script>
+  <script defer src="assets/js/main.js"></script>
 </body>
 </html>
