--- a/pages/architecture.html
+++ b/pages/architecture.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Architecture — O3</title>
   <meta name="description" content="System architecture for O3 — Orchestrator of Orbital Operations." />
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
   <header>
     <div class="nav">
-      <strong><a href="/index.html">O3</a></strong>
+      <strong><a href="../index.html">O3</a></strong>
       <nav>
-        <a href="/index.html#overview">Overview</a>
-        <a href="/pages/architecture.html">Architecture</a>
-        <a href="/pages/concepts.html">Concepts</a>
-        <a href="/pages/updates.html">Updates</a>
-        <a href="/index.html#contact">Contact</a>
+        <a href="../index.html#overview">Overview</a>
+        <a href="architecture.html">Architecture</a>
+        <a href="concepts.html">Concepts</a>
+        <a href="updates.html">Updates</a>
+        <a href="../index.html#contact">Contact</a>
       </nav>
     </div>
   </header>
@@ -32,7 +32,7 @@
         </p>
       </div>
       <figure>
-        <img src="/assets/img/figure1.svg" alt="O3 Architecture Diagram" />
+        <img src="../assets/img/figure1.svg" alt="O3 Architecture Diagram" />
         <figcaption>High-level system architecture showing core components and data flows.</figcaption>
       </figure>
     </section>
@@ -74,7 +74,7 @@
     <section class="card reveal">
       <h2>Data Flow</h2>
       <figure>
-        <img src="/assets/img/figure2.svg" alt="O3 Data Flow Diagram" />
+        <img src="../assets/img/figure2.svg" alt="O3 Data Flow Diagram" />
         <figcaption>Data flow between planning, scheduling, execution, and external systems.</figcaption>
       </figure>
     </section>
@@ -94,7 +94,7 @@
     © <span id="y"></span> O3 — Orchestrator of Orbital Operations. Built as a static page.
   </footer>
 
-  <script defer src="/assets/js/main.js"></script>
+  <script defer src="../assets/js/main.js"></script>
 </body>
 </html>
 
